fixed button alignment and close button on languages

--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -259,6 +259,7 @@ nav {
   visibility: 0;
   
   .close-button {
+    display: none;
     font-size: 2.5rem;
   }
   
@@ -278,6 +279,10 @@ nav {
     .sub-menu {
       opacity: 1;
       visibility: visible;
+    }
+
+    .close-button {
+      display: block;
     }
   }
 }
