--- a/scss/partials/_sign-in-modal.scss
+++ b/scss/partials/_sign-in-modal.scss
@@ -14,9 +14,10 @@
   }
 
   .button {
-    width: 170px;
+    width: 150px;
     font-size: 1rem;
     font-weight: normal;
+    padding: 10px 25px;
   }
 
   .user-auth {
@@ -125,6 +126,11 @@
 
     form {
       margin-top: 30px;
+    }
+
+    .button {
+      width: 170px;
+      padding: 10px 30px;
     }
 
     .button[type="submit"]{
